# weather_fetch

./: .gitignore  advanced_weather_analysis.py  main.py  mypy.ini  pyproject.toml  seasonal_analysis.py  temp_logger.py
.github/workflows/: advanced-analysis-monthly.yml  advanced-analysis-weekly.yml  ci.yml  codeq.yml  eval.yml  fetch.yml  pr-comment.yml  reusable-eval.yml  seasonal-monthly.yml  seasonal-weekly.yml  temp_logger.yml
data/: chicago_temps.csv
eval/: .gitkeep
tests/: test_main.py  test_temp_logger.py
