[project]
name = "weather-fetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7.3"
dependencies = [
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "mypy>=1.4.1",
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
    "ruff>=0.14.4",
    "types-requests>=2.31.0.20231231",
]
