[project]
name = "weather-fetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
]

[dependency-groups]
dev = [
    "black>=23.3.0",
    "mypy>=1.4.1",
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
    "ruff>=0.14.4",
    "types-requests>=2.31.0.20231231",
    "pandas-stubs>=2.0.0",
]
